--- a/picPicker/src/main/res/values/strings.xml
+++ b/picPicker/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="ip_need_to_del">要删除这张照片吗？</string>
     <string name="ip_cancel">取消</string>
     <string name="ip_str_confirm">确定</string>
+    <string name="select_limit_tip">您最多只能选择%1$d张图</string>
 </resources>
